# real-time-voice-ai-assistant

./: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  Dockerfile  QUICK_START.md  README.md  TROUBLESHOOTING_GUIDE.md  pyproject.toml  railway.json  run_local_mock.py  run_local_mock.sh  setup-deployment.sh
.specify/memory/: constitution.md
client/: .env.example  .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
client/src/: App.js  App.tsx  index.css  types.ts  vite-env.d.ts
client/src/components/: AudioRecorder.js  AudioRecorder.tsx  ConnectionPanel.js  ConnectionPanel.tsx  EventsDisplay.js  EventsDisplay.tsx  StatusHeader.js  StatusHeader.tsx  TelemetryDashboard.js  TelemetryDashboard.tsx
client/src/services/: websocket.js  websocket.ts
docs/: ARCHITECTURE_OVERVIEW.md  BACKEND_ARCHITECTURE.md  BACKEND_FILES.md  FRONTEND_ARCHITECTURE.md  FRONTEND_FILES.md  HOW_IT_WORKS.md  README.md  fmea.md
specs/001-streaming-voice-pipeline/: plan.md  spec.md  tasks.md
src/: __init__.py  config.py  mock_providers.py  server.py
src/fallback/: __init__.py  bridge_audio.py  strategies.py
src/models/: __init__.py  events.py  session.py  telemetry.py
src/pipeline/: __init__.py  orchestrator.py  replay.py  session_manager.py
src/services/: __init__.py  asr.py  circuit_breaker.py  llm.py  search.py  tools.py  tts.py
src/telemetry/: __init__.py  dashboard.py  logger.py  metrics.py
tests/fixtures/: sample_session.json
(+1 files in other folders)
